[package]
name = "upsights"
version = "0.1.0"
edition = "2021"

[dependencies]
up-api = "0.1.3"
notionapi = { path = "../notionapi" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.3"
serde_json = "1.0.117"
